[gd_scene load_steps=6 format=3 uid="uid://c3mf3s4myhxhf"]

[ext_resource type="Texture2D" uid="uid://shoivftoa644" path="res://Art/Backgrounds/Obstacle1.png" id="1_hi0w7"]
[ext_resource type="Script" path="res://Objects/pipe_static_body.gd" id="1_mhihk"]
[ext_resource type="Texture2D" uid="uid://bxqrv167k8q5m" path="res://Art/Backgrounds/Obstacle2.png" id="2_56ma4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3sdd1"]
size = Vector2(88, 436)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qemui"]
size = Vector2(88, 416)

[node name="PipeStaticBody" type="Node2D" groups=["object"]]
script = ExtResource("1_mhihk")

[node name="TopPipe" type="StaticBody2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="TopPipe"]
offset_top = -128.0
offset_right = 105.0
offset_bottom = 322.0
texture = ExtResource("1_hi0w7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
position = Vector2(52, 94)
shape = SubResource("RectangleShape2D_3sdd1")

[node name="BottomPipe" type="StaticBody2D" parent="."]
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="BottomPipe"]
offset_top = 440.0
offset_right = 105.0
offset_bottom = 872.0
texture = ExtResource("2_56ma4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
position = Vector2(52, 656)
shape = SubResource("RectangleShape2D_qemui")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
